--- v3.5 (2019-xx-xx) ---
* Package qtwebkit: update build script after switching of project to cmake.
* Update in all (supported) configs:
  - QTWEBKIT_VER to 5.212 (code from git repository is used)
  - QT5_VER from 5.12.0 to 5.12.1

--- v3.4 (2018-12-26) ---
* Add new packages: pcre, qtremoteobjects.
* Update cmake toolchain file generated by package cmake-settings: added
  workarround for fixing builds of some cmake-based projects using GCC >= 6.x.
  (Due to misuse of "-isystem" compiler option.)
* Package qtbase: update configuration options after switching to Qt 5.11.x.
* Package lua: fix usage of CFLAGS and LDFLAGS from build environment.
* Update in all static configs:
  - OPENSSL_VER from 1.0.2p to 1.0.2q
* Update in all configs:
  - QT5_VER from 5.11.1 to 5.12.0 (except AstraLinux 1.3)
  - QT5_VER from 5.11.1 to 5.11.3 (for AstraLinux 1.3)
  - QWT_VER from 6.1.3 to 6.1.4

--- v3.3 (2018-09-13) ---
* Add new packages: lua, miniupnpc, pcre2.
* Delete extra variables CLEAN_SRC_DIR and CLEAN_BUILD_DIR from settings file.
* Update package qtbase: build with system pcre2 library.
* Update package protobuf: make also binary executable for host system.
* Update package gcc-extra: add permanent symlinks for executable files:
  c++, cpp, g++, gcc, gcc-ar, gcc-nm, gcc-ranlib, gcov, gcov-tool.
* Update package bzip2: use web.archive.org in PKG_URL because www.bzip.org
  website is dead.
* Update in all static configs:
  - OPENSSL_VER from 1.0.2o to 1.0.2p
  - CURL_VER from 7.57.0 to 7.61.1
* Update in all (supported) configs:
  - GCC_EXTRA_VER from 6.4.0 to 8.2.0
  - PROTOBUF_VER from 3.5.1 to 3.6.1
  - OPENSCENEGRAPH_VER from 3.6.1 to 3.6.2
  - QTKEYCHAIN_VER from 0.8.0 to 0.9.1
  - QT5_VER from 5.10.1 to 5.11.1
  - X264_VER from 20161130-2245 to 20180806-2245
  - FFMPEG_VER from 4.0.1 to 4.0.2

--- v3.2 (2018-07-07) ---
* Add new native packages: cmake, pkg-config.
* Add new packages: libusb, pciutils, sysfsutils, udev, usbutils.