@@ -70,6 +70,7 @@ LIBXT_VER=1.1.3
 LIBSM_VER=1.2.1
 LIBICE_VER=1.0.8
 LIBXSS_VER=1.2.2
+LIBXKBCOMMON_VER=
 
 LIBDRM_VER=2.4.33
 MESA_VER=8.0.3
