@@ -70,6 +70,7 @@ LIBXT_VER=1.1.3
 LIBSM_VER=1.2.1
 LIBICE_VER=1.0.8
 LIBXSS_VER=1.2.2
+LIBXKBCOMMON_VER=0.4.1
 
 LIBDRM_VER=2.4.54
 MESA_VER=10.1.4
