@@ -174,6 +174,8 @@ f2e3627d7292ec5eff488ab58867fba14a62f06e72a8d3337ab6222c09873109  libXi-1.6.1.ta
 e92adb6b69c53c51e05c1e65db97e23751b935a693000fb0606c11b88c0066c5  libXi-1.7.1.tar.bz2
 df24781dc63645e2b561cd0b20bd8a0e7aff02e426a8d2a7641159004d4cb20e  libXi-1.7.2.tar.bz2
 2cffc2686618dc1803725636cd92b36342c512dc60a7a35cba34bf7192a42244  libXi-1.7.4.tar.bz2
+90ee502ec919814533c65e74c208212854f5bae9b9b87932eeb96fb3876b8ff6  libxkbcommon-0.4.1.tar.xz
+9a52d5d0419e76c49c0ece86208c205ffacb1cf0ff8ffbaba98d3d4dd40c4e41  libxkbcommon-0.4.3.tar.xz
 238c4f0203c012e5776522640c0fb3ac532c4064981c1ce3e74c00b75501d761  libxml2-2.7.6.tar.gz
 f2e2d0e322685193d1affec83b21dc05d599e17a7306d7b90de95bb5b9ac622a  libxml2-2.8.0.tar.gz
 fd3c64cb66f2c4ea27e934d275904d92cec494a8e8405613780cbc8a71680fdb  libxml2-2.9.1.tar.gz
